moving more images, including site logo

--- a/New Residents.htm
+++ b/New Residents.htm
@@ -26,7 +26,7 @@ o\:*         { behavior: url(#default#VML) }
 <table border="0" cellpadding="0" cellspacing="0" width="104%" bgcolor="#336699">
 	<tr>
 		<td width="68%">
-		&nbsp;<img border="0" src="creek-for-web.gif" width="150" height="112"><!--[if gte vml 1]><v:shapetype id="_x0000_t136"
+		&nbsp;<img border="0" src="images/twin-creeks.gif" width="150" height="112"><!--[if gte vml 1]><v:shapetype id="_x0000_t136"
  coordsize="21600,21600" o:spt="136" adj="10800" path="m@7,l@8,m@5,21600l@6,21600e">
  <v:formulas>
   <v:f eqn="sum #0 0 10800"/>
@@ -380,7 +380,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 		following link:</font></p>
 		<p>&nbsp;</p>
 		<p align="center"><a href="http://www.pike.k12.in.us/pikeweb/">
-		<img border="0" src="epike_01.gif" width="135" height="133" align="left"></a></p>
+		<img border="0" src="images/epike_01.gif" width="135" height="133" align="left"></a></p>
 		<p><span style="text-transform: uppercase"><b>
 		<font face="Verdana" color="#000000">&nbsp;</font><a href="http://www.pike.k12.in.us/pikeweb/"><font face="Verdana" color="#000000">MSD 
 		of Pike </font></a><font face="Verdana" color="#000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font></b></span></p>
