--- a/new-residents.html
+++ b/new-residents.html
@@ -264,7 +264,7 @@ environment. </font></p>
 following link:</font></p>
 <p>&nbsp;</p>
 <p align="center"><a href="http://www.pike.k12.in.us/pikeweb/">
-<img border="0" src="epike_01.gif" width="135" height="133" align="left"></a></p>
+<img border="0" src="images/epike_01.gif" width="135" height="133" align="left"></a></p>
 <p><span style="text-transform: uppercase"><b>
 <font face="Verdana" color="#000000">&nbsp;</font><a href="http://www.pike.k12.in.us/pikeweb/"><font face="Verdana" color="#000000">MSD 
 of Pike </font></a><font face="Verdana" color="#000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font></b></span></p>
