--- a/Newsletters.htm
+++ b/Newsletters.htm
@@ -26,7 +26,7 @@ o\:*         { behavior: url(#default#VML) }
 <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#336699">
 	<tr>
 		<td width="75%">
-		<p>&nbsp;<img border="0" src="creek-for-web.gif" width="150" height="112"><!--[if gte vml 1]><v:shapetype id="_x0000_t136"
+		<p>&nbsp;<img border="0" src="images/twin-creeks.gif" width="150" height="112"><!--[if gte vml 1]><v:shapetype id="_x0000_t136"
  coordsize="21600,21600" o:spt="136" adj="10800" path="m@7,l@8,m@5,21600l@6,21600e">
  <v:formulas>
   <v:f eqn="sum #0 0 10800"/>
