--- a/index-old.html
+++ b/index-old.html
@@ -60,7 +60,7 @@ function FP_getObjectByID(id,o) {//v1.0
 		<td width="84%" valign="top" bordercolor="#336699">
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
 		<p>&nbsp;
-		<img border="0" src="creek-for-web.gif" width="150" height="112">&nbsp; <!--[if gte vml 1]><v:shapetype id="_x0000_t136"
+		<img border="0" src="images/twin-creeks.gif" width="150" height="112">&nbsp; <!--[if gte vml 1]><v:shapetype id="_x0000_t136"
  coordsize="21600,21600" o:spt="136" adj="10800" path="m@7,l@8,m@5,21600l@6,21600e">
  <v:formulas>
   <v:f eqn="sum #0 0 10800"/>
