moving homepage buttons

--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@ information about your Twin Creeks Community.</p>
 <p>We have finalized the Budget for 2009. Please click on the following link if 
 you would like a PDF copy.</p>
 <p><a href="2009%20budget.pdf">
-<img border="0" id="img25" src="button11.jpg" height="20" width="100" alt="2009  Budget" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA; fp-orig: 0" fp-title="2009  Budget"></a></p>
+<img border="0" id="img25" src="images/button11.jpg" height="20" width="100" alt="2009  Budget" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA; fp-orig: 0" fp-title="2009  Budget"></a></p>
 <p>
 &nbsp;<p>
 <font color="#336699"><b>Association Dues </b></font>
 	<p style="margin-left: 20px; margin-top:5px">
 	<a href="2009%20Dues%20Increase.pdf">
-	<img border="0" id="img5" src="button12.jpg" height="20" width="100" alt="2009  Increase" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="2009  Increase"></a></p>
+	<img border="0" id="img5" src="images/button12.jpg" height="20" width="100" alt="2009  Increase" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="2009  Increase"></a></p>
 <p style="margin-left: 20px; margin-top:5px">
 	<a href="Homeowner%20-%202008%20Dues%20Increase.pdf">
-	<img border="0" id="img7" src="button21.jpg" height="20" width="100" alt="2008  Increase" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="2008  Increase"></a></p>
+	<img border="0" id="img7" src="images/button21.jpg" height="20" width="100" alt="2008  Increase" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="2008  Increase"></a></p>
 <p style="margin-left: 20px; margin-top:5px">
 	&nbsp;</p>
 <p><u><b><font color="#336699">Volunteers Needed</font></b></u></p>
@@ -115,7 +115,7 @@ additional information, please visit:</p>
 <div>
 <font size="2">
 <p style="margin-top: 6px" align="center"><a href="IntroLetter.pdf">
-<img border="0" id="img24" src="button50.jpg" height="20" width="100" alt="Welcome Letter"></a><a href="Kirkpatrick%20Neighbor%20letter.pdf"><img border="0" id="img22" src="button47.jpg" height="20" width="100" alt="Kirpatrick Chosen" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Kirpatrick Chosen"></a></div>
+<img border="0" id="img24" src="images/button50.jpg" height="20" width="100" alt="Welcome Letter"></a><a href="Kirkpatrick%20Neighbor%20letter.pdf"><img border="0" id="img22" src="images/button47.jpg" height="20" width="100" alt="Kirpatrick Chosen" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Kirpatrick Chosen"></a></div>
 </font>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -126,29 +126,29 @@ this study is to ensure our community is sufficiently planning for longtime,
 periodic capital expenditures. </p>
 	<p style="margin-left: 20px; margin-top:5px">
 	<a href="Sec%201%20-%20Board%20Summary.pdf">
-	<img border="0" id="img11" src="buttonD1.jpg" height="20" width="100" alt="Summary" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Summary"></a></p>
+	<img border="0" id="img11" src="images/buttonD1.jpg" height="20" width="100" alt="Summary" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Summary"></a></p>
 <p style="margin-left: 20px; margin-top:5px">
 	<a href="Homeowner%20-%202008%20Dues%20Increase.pdf">
-	<img border="0" id="img12" src="button38.jpg" height="20" width="100" alt="Inventory" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Inventory"></a></p>
+	<img border="0" id="img12" src="images/button38.jpg" height="20" width="100" alt="Inventory" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Inventory"></a></p>
 <p style="margin-left: 20px; margin-top:5px">
 	<a href="Sec%203%20-%20Annual%20Expenditures.pdf">
-	<img border="0" id="img17" src="button39.jpg" height="20" width="100" alt="Expenditures" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Expenditures"></a></p>
+	<img border="0" id="img17" src="images/button39.jpg" height="20" width="100" alt="Expenditures" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Expenditures"></a></p>
 <p style="margin-top: 6px; margin-bottom: 6px; margin-left:20px">
 <a href="Sec%204%20-%20Financial%20Schedule.pdf">
-<img border="0" id="img18" src="button1F.jpg" height="20" width="100" alt="Schedule" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Schedule"></a></p>
+<img border="0" id="img18" src="images/button1F.jpg" height="20" width="100" alt="Schedule" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Schedule"></a></p>
 <p style="margin-top: 6px; margin-bottom: 6px; margin-left:20px">
 <a href="Sec%205%20-%20Funding%20Charts.pdf">
-<img border="0" id="img19" src="button40.jpg" height="20" width="100" alt="Charts" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Charts"></a></p>
+<img border="0" id="img19" src="images/button40.jpg" height="20" width="100" alt="Charts" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Charts"></a></p>
 <p style="margin-top: 6px; margin-bottom: 6px; margin-left:20px">
 <a href="Sec%206%20-%20Exhibits.pdf">
-<img border="0" id="img20" src="button41.jpg" height="20" width="100" alt="Exhibits" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Exhibits"></a></p>
+<img border="0" id="img20" src="images/button41.jpg" height="20" width="100" alt="Exhibits" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA" fp-title="Exhibits"></a></p>
 <p style="margin-top: 6px; margin-bottom: 6px; margin-left:20px">
 &nbsp;</p>
 <p><u><font color="#336699"><b>May 2009 - Year To Date Financials</b></font></u></p>
 <div>
 <font size="2">
 <p style="margin-top: 6px"><a href="X3e_62AF3777.pdf">
-<img border="0" id="img21" src="button44.jpg" height="20" width="100" alt="May 2009" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA; fp-orig: 0" fp-title="May 2009"></a></div>
+<img border="0" id="img21" src="images/button44.jpg" height="20" width="100" alt="May 2009" fp-style="fp-btn: Jewel 1; fp-font: Arial; fp-font-size: 8.5; fp-bgcolor: #FFFFEA; fp-orig: 0" fp-title="May 2009"></a></div>
 </font>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
