--- a/newsletters.html
+++ b/newsletters.html
@@ -16,7 +16,7 @@ title: Newsletters
 <a href="Connection%20Fall%202007.pdf">Fall 2008</a></font></b><p align="left" style="margin-right: 100px; margin-left:15px">
 <b><font face="Verdana" color="#336699">
 <a href="newsletters/tchoa-newsletter-spring-2008.pdf">Spring 2008</a></font></b><p align="left" style="margin-right: 100px; margin-left:15px">
-<b><a href="tcnl%20vol1%2010%2006.pdf">
+<b><a href="newsletters/tchoa-newsletter-fall-2007-vol1.pdf">
 <font face="Verdana" size="2" color="#336699">Fall 2007 - Volume I, Issue 1 
 (new edition)</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">
 <b><a href="Twin%20Creek%20Newsletter%20Fall%20Iss%205.pdf">
