moving crime watch and email button images

--- a/About Us.htm
+++ b/About Us.htm
@@ -182,7 +182,7 @@ v:shapes="_x0000_s1026"></span><![endif]></p>
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="center" style="margin-left: 3px">
 				<a title="FAQ Request" href="mailto:wyattsmt@aol.com?subject=FAQ">
-				<img border="0" src="EmailButton.gif" width="97" height="35"></a></p>
+				<img border="0" src="images/email-button.gif" width="97" height="35"></a></p>
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="left" style="margin-left: 3px"><b><font size="3">
 				<font color="#336699">2.</font> </font></b>Help is needed and 
