--- a/Crime Watch.htm
+++ b/Crime Watch.htm
@@ -549,7 +549,7 @@ v:shapes="_x0000_s1028"></span><![endif]></p>
 								<p style="margin-top: 6px; margin-bottom: 6px">
 								<font size="4" color="#336699"><b>2009 Crime Watch 
 								Incidents:</b></font></p><p style="margin-right: 8px">
-										<img border="0" src="CW.gif" width="150" height="147" align="left"></p>
+										<img border="0" src="images/crime-watch-no.gif" width="150" height="147" align="left"></p>
 								<p style="margin-right: 8px">
 										<b>
 										<font face="Times New Roman" style="font-size: 11pt" color="#FF0000">
@@ -1121,7 +1121,7 @@ layout-grid-mode:line">¨<span style="font:7.0pt &quot;Times New Roman&quot;">&nb
 			<p><font face="sans-serif">Please click on the following link for a 
 			new posting on the Crime Watch page.</font></p>
 <p align="center"><font color="#336699"><b>
-<img border="0" src="CW.gif" width="30" height="29"><a href="Crime%20Watch.htm">Crime 
+<img border="0" src="images/crime-watch-no.gif" width="30" height="29"><a href="Crime%20Watch.htm">Crime 
 Watch Alert</a></b></font></p>
 <p>&nbsp;</p>
 				</td>
