--- a/Twin Creeks faq.htm
+++ b/Twin Creeks faq.htm
@@ -174,7 +174,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Registration Page.htm_cmp_ice
 		please email the Board.</p>
 		<p align="center">
 		<a href="mailto:president@teincreekshoa.com?subject=Committee Request">
-		<img border="0" src="EmailButton.gif" width="97" height="35"></a></p>
+		<img border="0" src="images/email-button.gif" width="97" height="35"></a></p>
 		<p align="center">
 		&nbsp;</p>
 		<p style="margin-bottom: 6px"><font color="#0000FF"><b>
@@ -222,7 +222,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Registration Page.htm_cmp_ice
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="center" style="margin-left: 3px">
 				<a title="FAQ Request" href="mailto:wyattsmt@aol.com?subject=FAQ">
-				<img border="0" src="EmailButton.gif" width="97" height="35"></a></p>
+				<img border="0" src="images/email-button.gif" width="97" height="35"></a></p>
 				<p align="center" style="margin-left: 3px">&nbsp;</p>
 				<p align="left" style="margin-left: 3px"><b>
 				<font color="#336699" size="3">2.</font></b> Now accepting ads 
