--- a/resources.html
+++ b/resources.html
@@ -374,7 +374,7 @@ src="Resources_files/image004.jpg" v:shapes="_x0000_s1025"><![endif]></span></p>
 		following link:</p>
 		<p align="center" style="margin-top: 4px; margin-left:10px">
 		<a title="Classifieds Request" href="mailto:wyattsmt@aol.com">
-						<img border="0" src="Email%20Button.gif" width="97" height="35"></a></td>
+						<img border="0" src="images/email-button.gif" width="97" height="35"></a></td>
 	</tr>
 </table>
 </td>
