--- a/Events.htm
+++ b/Events.htm
@@ -522,7 +522,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 			<p align="center"><b>Volunteers Needed</b></div>
 		<div>
 			<p align="center">&nbsp;</p>
-			<p align="center">&nbsp;<a title="Lighting Work Group" href="mailto:wyattsmt@aol.com?subject=Lighting Work Group"><img border="0" src="Email%20Button.gif" width="97" height="35"></a></p>
+			<p align="center">&nbsp;<a title="Lighting Work Group" href="mailto:wyattsmt@aol.com?subject=Lighting Work Group"><img border="0" src="images/email-button.gif" width="97" height="35"></a></p>
 			</div>
 					</td>
 					<td>
@@ -536,7 +536,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 		<div>
 			<p align="center">
 			<a title="Lighting Work Group" href="mailto:wyattsmt@aol.com?subject=Landscape Work Group">
-								<img border="0" src="Email%20Button.gif" width="97" height="35"></a></div>
+								<img border="0" src="images/email-button.gif" width="97" height="35"></a></div>
 					</td>
 				</tr>
 			</table>
