--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@ tips and overall general information we have found useful.</p>
 	and clubs. Each of these committees are looking 
 	for volunteers who would like to participate. If you are interested 
 	please email the Board.</p>
-	<p align="center"><a href="mailto:president@teincreekshoa.com?subject=Committee Request"><img border="0" src="EmailButton.gif" width="97" height="35"></a></p>
+	<p align="center"><a href="mailto:president@teincreekshoa.com?subject=Committee Request"><img border="0" src="images/email-button.gif" width="97" height="35"></a></p>
 	</dd>
 	
 	<dt>How can I get more involved in my neighborhood?</dt>
