--- a/index-old.html
+++ b/index-old.html
@@ -663,7 +663,7 @@ link below to register.<p>&nbsp;<p align="center">
 			<font style="font-size: 11pt"><a href="Covenants.pdf">Covenants</a></font></li>
 			<li>
 			<p align="left" style="margin-right: 6px">
-			<font style="font-size: 11pt"><a href="Bylaws%20Revised.pdf">Bylaws</a></font></li>
+			<font style="font-size: 11pt"><a href="documents/tchoa-bylaws-revised.pdf">Bylaws</a></font></li>
 			<li>
 			<p align="left" style="margin-right: 6px">
 			<font style="font-size: 11pt">
