--- a/bylaws.html
+++ b/bylaws.html
@@ -15,7 +15,7 @@ title: Bylaws
 		Bylaws, click on the following link:</p>
 		<p>&nbsp;</p>
 		<p align="center"><font color="#0000FF" style="font-size: 9pt">
-		<a href="Bylaws%20Revised.pdf">
+		<a href="documents/tchoa-bylaws-revised.pdf">
 		<img border="0" src="PDF.jpg" width="35" height="32" align="center">TCHOA 
 		BYLAWS</a></font></p>
 		<p>&nbsp;</p>
