Moving HOAMinutes*.pdf

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ information about your Twin Creeks Community.</p>
 	<p><font color="#336699"><b>June </b></font>
 	<b><font color="#336699"> Monthly Minutes - </font></b>
 	<font color="#FF0000"><i><b>
-	<a href="HOAMinutes.6.09.10.pdf">ADDED</a> </b></i></font></p>
+	<a href="minutes/HOAMinutes.6.09.10.pdf">ADDED</a> </b></i></font></p>
 	<p>
 &nbsp;<p><font color="#336699"><b>2009 Budget</b></font></p>
 <p>We have finalized the Budget for 2009. Please click on the following link if 
