--- a/minutes-bylaws.html
+++ b/minutes-bylaws.html
@@ -8,32 +8,32 @@ title: Minutes &amp; Bylaws
 
 <h3>2010</h3>
 <p>
-	<a href="HOAMinutes.6.09.10.pdf">June 2010</a>,
-	<a href="HOAMinutes.5.12.10.pdf">May 2010</a>,
-	<a href="HOAMinutes.3.24.10.pdf">March 2010</a>,
-	<a href="HOAMinutes.3.4%202010.pdf">February 2010</a>,
-	<a href="HOAMinutes.1.26%202010.pdf">January 2010</a>
+	<a href="minutes/HOAMinutes.6.09.10.pdf">June 2010</a>,
+	<a href="minutes/HOAMinutes.5.12.10.pdf">May 2010</a>,
+	<a href="minutes/HOAMinutes.3.24.10.pdf">March 2010</a>,
+	<a href="minutes/HOAMinutes.3.4%202010.pdf">February 2010</a>,
+	<a href="minutes/HOAMinutes.1.26%202010.pdf">January 2010</a>
 </p>
 
 <h3>2009</h3>
 <p>
-	<a href="HOAMinutes.12.16.2010.pdf">December 2009</a>,
-	<a href="HOAMinutes.10.26.09.pdf">October 2009</a>,
-	<a href="HOAMinutes.09.23.pdf">September 2009</a>,
-	<a href="HOAMinutes.08.26.09.pdf">August 2009</a>,
-	<a href="HOAMinutes.06.10.09.pdf">June 2009</a>,
-	<a href="HOAMinutes.05.27.09.pdf">May 2009</a>,
-	<a href="HOAMinutes.03.25.09.pdf">March 2009</a>,
-	<a href="HOAMinutes.02.25.09a.pdf">February 2009</a>,
-	<a href="HOAMinutes.02.04.09.pdf">January 2009</a>	
+	<a href="minutes/HOAMinutes.12.16.2010.pdf">December 2009</a>,
+	<a href="minutes/HOAMinutes.10.26.09.pdf">October 2009</a>,
+	<a href="minutes/HOAMinutes.09.23.pdf">September 2009</a>,
+	<a href="minutes/HOAMinutes.08.26.09.pdf">August 2009</a>,
+	<a href="minutes/HOAMinutes.06.10.09.pdf">June 2009</a>,
+	<a href="minutes/HOAMinutes.05.27.09.pdf">May 2009</a>,
+	<a href="minutes/HOAMinutes.03.25.09.pdf">March 2009</a>,
+	<a href="minutes/HOAMinutes.02.25.09a.pdf">February 2009</a>,
+	<a href="minutes/HOAMinutes.02.04.09.pdf">January 2009</a>	
 </p>
 
 <h3>2007</h3>
 <p>
-	<a href="TCHOAMinutes.09.07.pdf">September 2007</a>,
-	<a href="TCHOAMinutes.08.07.pdf">August 2007</a>,
+	<a href="TCminutes/HOAMinutes.09.07.pdf">September 2007</a>,
+	<a href="TCminutes/HOAMinutes.08.07.pdf">August 2007</a>,
 	<a href="TCHOAMInutes.07.07.pdf">July 2007</a>,
-	<a href="TCHOAMinutes%2006.07.pdf">June 2007</a>,
+	<a href="TCminutes/HOAMinutes%2006.07.pdf">June 2007</a>,
 	<a href="Microsoft%20Word%20-%20HOAMInutes.05.07.doc.pdf">May 2007</a>,
 	<a href="Microsoft%20Word%20-%20HOAMInutes.04.07.doc.pdf">April 2007</a>,
 	<a href="February%202007%20minutes2.pdf">February 2007</a>,
