--- a/services.htm
+++ b/services.htm
@@ -146,14 +146,14 @@ if(MSFPhover) { MSFPnav12n=MSFPpreload("fp_derived/Bylaws.htm_cmp_ice174010_vbtn
 		<p align="left" style="margin-left: 20px">
 		<b><u>Past Monthly Minutes</u></b></p>
 		<p align="left" style="margin-left: 20px">
-		<a href="TCHOAMinutes.09.07.pdf">September 2007</a> <font face="Verdana">
+		<a href="TCminutes/HOAMinutes.09.07.pdf">September 2007</a> <font face="Verdana">
 		<a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
 		<p align="left" style="margin-left: 20px">
-		<a href="TCHOAMinutes.08.07.pdf">August 2007</a><font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
+		<a href="TCminutes/HOAMinutes.08.07.pdf">August 2007</a><font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
 		<p align="left" style="margin-left: 20px">
 		<a href="TCHOAMInutes.07.07.pdf">July 2007</a> <font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
 		<p align="left" style="margin-left: 20px">
-		<a href="TCHOAMinutes%2006.07.pdf">June 2007</a> <font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
+		<a href="TCminutes/HOAMinutes%2006.07.pdf">June 2007</a> <font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
 		<p align="left" style="margin-left: 20px">
 		<a href="Microsoft%20Word%20-%20HOAMInutes.05.07.doc.pdf">May 2007</a> <font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
 		<p align="left" style="margin-left: 20px">
