--- a/index-old.html
+++ b/index-old.html
@@ -172,43 +172,43 @@ if(MSFPhover) { MSFPnav11n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 				Website Updates:</b></font></td>
 			</tr>
 			<tr>
-				<td><a href="HOAMinutes.6.09.10.pdf">Jun 2010 Minutes Added</a></td>
+				<td><a href="minutes/HOAMinutes.6.09.10.pdf">Jun 2010 Minutes Added</a></td>
 			</tr>
 			<tr>
 				<td><span style="font-size: 9pt">
-				<a href="HOAMinutes.5.12.10.pdf">May 2010 Minutes Added</a></span></td>
+				<a href="minutes/HOAMinutes.5.12.10.pdf">May 2010 Minutes Added</a></span></td>
 			</tr>
 			<tr>
 				<td><a href="Crime%20Watch.htm">Crime Watch Notice</a></td>
 			</tr>
 			<tr>
 				<td><span style="font-size: 9pt">
-				<a href="HOAMinutes.3.24.10.pdf">Mar 2010 Minutes Added</a></span></td>
+				<a href="minutes/HOAMinutes.3.24.10.pdf">Mar 2010 Minutes Added</a></span></td>
 			</tr>
 			<tr>
-				<td><a href="HOAMinutes.3.4%202010.pdf">
+				<td><a href="minutes/HOAMinutes.3.4%202010.pdf">
 				<span style="font-size: 9pt">Feb </span></a>
 				<span style="font-size: 9pt">
-				<a href="HOAMinutes.3.4%202010.pdf">2010 Minutes Added</a></span></td>
+				<a href="minutes/HOAMinutes.3.4%202010.pdf">2010 Minutes Added</a></span></td>
 			</tr>
 			<tr>
 				<td><span style="font-size: 9pt">
-				<a href="HOAMinutes.1.26%202010.pdf">Jan 2010 Minutes Added</a></span></td>
+				<a href="minutes/HOAMinutes.1.26%202010.pdf">Jan 2010 Minutes Added</a></span></td>
 			</tr>
 			<tr>
 				<td><span style="font-size: 9pt">
-				<a href="HOAMinutes.12.16.2010.pdf">Dec 2009 Minutes Added</a></span></td>
+				<a href="minutes/HOAMinutes.12.16.2010.pdf">Dec 2009 Minutes Added</a></span></td>
 			</tr>
 			<tr>
-				<td><a href="HOAMinutes.10.26.09.pdf">Oct 2009 Minutes Added</a></td>
+				<td><a href="minutes/HOAMinutes.10.26.09.pdf">Oct 2009 Minutes Added</a></td>
 			</tr>
 			<tr>
-				<td><span style="font-size: 9pt"><a href="HOAMinutes.09.23.pdf">
+				<td><span style="font-size: 9pt"><a href="minutes/HOAMinutes.09.23.pdf">
 				Sept 2009 Minutes Added</a></span></td>
 			</tr>
 			<tr>
 				<td><span style="font-size: 9pt">
-				<a href="HOAMinutes.08.26.09.pdf">Aug 2009 Minutes Added</a></span></td>
+				<a href="minutes/HOAMinutes.08.26.09.pdf">Aug 2009 Minutes Added</a></span></td>
 			</tr>
 			<tr>
 				<td><a href="July2009.pdf">July 2009 Financial Doc</a></td>
@@ -221,11 +221,11 @@ if(MSFPhover) { MSFPnav11n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 			</tr>
 			<tr>
 				<td><span style="font-size: 9pt">
-				<a href="HOAMinutes.06.10.09.pdf">June 2009 Minutes Added</a></span></td>
+				<a href="minutes/HOAMinutes.06.10.09.pdf">June 2009 Minutes Added</a></span></td>
 			</tr>
 			<tr>
 				<td><font color="#000000" style="font-size: 9pt">
-				<a href="HOAMinutes.05.27.09.pdf">May 2009 Minutes Added</a></font></td>
+				<a href="minutes/HOAMinutes.05.27.09.pdf">May 2009 Minutes Added</a></font></td>
 			</tr>
 			<tr>
 				<td><a href="Crime%20Watch.htm">Crime Watch Update</a></td>
@@ -234,13 +234,13 @@ if(MSFPhover) { MSFPnav11n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 				<td><a href="April%20Budget%202009.pdf">Apr 2009 Budget Added</a></td>
 			</tr>
 			<tr>
-				<td><a href="HOAMinutes.03.25.09.pdf">Mar 2009 Minutes Added</a></td>
+				<td><a href="minutes/HOAMinutes.03.25.09.pdf">Mar 2009 Minutes Added</a></td>
 			</tr>
 			<tr>
-				<td><a href="HOAMinutes.02.25.09a.pdf">Feb 2009 Minutes Added</a></td>
+				<td><a href="minutes/HOAMinutes.02.25.09a.pdf">Feb 2009 Minutes Added</a></td>
 			</tr>
 			<tr>
-				<td><a href="HOAMinutes.02.04.09.pdf">Jan 2009 Minutes Added</a></td>
+				<td><a href="minutes/HOAMinutes.02.04.09.pdf">Jan 2009 Minutes Added</a></td>
 			</tr>
 			<tr>
 				<td><span style="font-size: 9pt">
@@ -298,7 +298,7 @@ information about your Twin Creeks Community.</p>
 			<p><font color="#336699"><b>June </b></font>
 			<b><font color="#336699"> Monthly Minutes - </font></b>
 			<font color="#FF0000"><i><b>
-			<a href="HOAMinutes.6.09.10.pdf">ADDED</a> </b></i></font></p>
+			<a href="minutes/HOAMinutes.6.09.10.pdf">ADDED</a> </b></i></font></p>
 			<p>
 &nbsp;<p><font color="#336699"><b>2009 Budget</b></font></p>
 <p>We have finalized the Budget for 2009. Please click on the following link if 
