--- a/Events.htm
+++ b/Events.htm
@@ -466,10 +466,10 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 		}
 		-->
 </script>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_8243'],'480','360','2570',0);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/PIC_0030.JPG" id="fpphoto_8243" name="fpphoto_8243" lowsrc="PIC_0030.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_8725'],'480','360','2570',1);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/PIC_0001.JPG" id="fpphoto_8725" name="fpphoto_8725" lowsrc="PIC_0001.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_6901'],'360','480','2570',2);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/PIC_0014.JPG" id="fpphoto_6901" name="fpphoto_6901" lowsrc="PIC_0014.JPG" width="75" height="100" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_9002'],'480','360','2570',3);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/PIC_0021.JPG" id="fpphoto_9002" name="fpphoto_9002" lowsrc="PIC_0021.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_8243'],'480','360','2570',0);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/images/PIC_0030.JPG" id="fpphoto_8243" name="fpphoto_8243" lowsrc="images/PIC_0030.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_8725'],'480','360','2570',1);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/images/PIC_0001.JPG" id="fpphoto_8725" name="fpphoto_8725" lowsrc="images/PIC_0001.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_6901'],'360','480','2570',2);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/images/PIC_0014.JPG" id="fpphoto_6901" name="fpphoto_6901" lowsrc="images/PIC_0014.JPG" width="75" height="100" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_9002'],'480','360','2570',3);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/images/PIC_0021.JPG" id="fpphoto_9002" name="fpphoto_9002" lowsrc="images/PIC_0021.JPG" width="100" height="75" title="" align="absmiddle" /></a>
 <span style="width:0;height:100;visibility:hidden">.</span>
 <script language="JavaScript1.1">
 <!--
@@ -492,7 +492,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 </td>
 </tr>
 </table>
-<img id="fpGalleryMainImg_2570" name="fpGalleryMainImg_2570" width="480" height="360" src="PIC_0030.JPG" title="" />
+<img id="fpGalleryMainImg_2570" name="fpGalleryMainImg_2570" width="480" height="360" src="images/PIC_0030.JPG" title="" />
 <layer visibility="hide">
 <div id="fpGalleryCaptionCell_2570">
 </div>
