moving more photos

--- a/board.html
+++ b/board.html
@@ -14,13 +14,13 @@ title: Board Members
 			<td align="center">
 			<span style="text-transform: uppercase">
 			<font color="#0000FF"><b>
-			<img border="0" src="DSCN2818.JPG" width="175" height="157"></b></font></span><p>&nbsp;</p>
+			<img border="0" src="images/DSCN2818.JPG" width="175" height="157"></b></font></span><p>&nbsp;</p>
 			<p><span style="text-transform: uppercase">
 			<font color="#0000FF"><b>Wyatt Smith</b></font></span></p>
 			<p><b>President</b></p>
 			<p><a href="mailto:wyattsmt@aol.com">wyattsmt@aol.com</a></td>
 			<td align="center">
-			<img border="0" src="DSCN6669%20copy.jpg" width="175" height="147"><p>&nbsp;</p>
+			<img border="0" src="images/DSCN6669%20copy.jpg" width="175" height="147"><p>&nbsp;</p>
 			<p><span style="text-transform: uppercase"><b>
 			<font color="#0000FF">Charles Young</font></b></span></p>
 			<p>
