--- a/events.html
+++ b/events.html
@@ -42,11 +42,11 @@ if (fp_ns6()) {
 }
 -->
 </script>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_5760'],'480','360','1573',0);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5027.JPG" id="fpphoto_5760" name="fpphoto_5760" lowsrc="DSCN5027.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1855'],'480','360','1573',1);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5029.JPG" id="fpphoto_1855" name="fpphoto_1855" lowsrc="DSCN5029.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_2105'],'500','375','1573',2);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5033.JPG" id="fpphoto_2105" name="fpphoto_2105" lowsrc="DSCN5033.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_997'],'480','360','1573',3);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5034.JPG" id="fpphoto_997" name="fpphoto_997" lowsrc="DSCN5034.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1521'],'480','360','1573',4);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5036.JPG" id="fpphoto_1521" name="fpphoto_1521" lowsrc="DSCN5036.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_5760'],'480','360','1573',0);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5027.JPG" id="fpphoto_5760" name="fpphoto_5760" lowsrc="images/DSCN5027.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1855'],'480','360','1573',1);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5029.JPG" id="fpphoto_1855" name="fpphoto_1855" lowsrc="images/DSCN5029.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_2105'],'500','375','1573',2);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5033.JPG" id="fpphoto_2105" name="fpphoto_2105" lowsrc="images/DSCN5033.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_997'],'480','360','1573',3);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5034.JPG" id="fpphoto_997" name="fpphoto_997" lowsrc="images/DSCN5034.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1521'],'480','360','1573',4);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5036.JPG" id="fpphoto_1521" name="fpphoto_1521" lowsrc="images/DSCN5036.JPG" width="100" height="75" title="" align="absmiddle" /></a>
 <script language="JavaScript1.1">
 <!--
 	if (fp_ns6()) {			
@@ -54,10 +54,10 @@ if (fp_ns6()) {
 	}
 	-->
 </script>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_3188'],'480','360','1573',5);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5037.JPG" id="fpphoto_3188" name="fpphoto_3188" lowsrc="DSCN5037.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1203'],'480','360','1573',6);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5038.JPG" id="fpphoto_1203" name="fpphoto_1203" lowsrc="DSCN5038.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1267'],'500','360','1573',7);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5040.JPG" id="fpphoto_1267" name="fpphoto_1267" lowsrc="DSCN5040.JPG" width="100" height="72" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_5086'],'480','360','1573',8);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/DSCN5041.JPG" id="fpphoto_5086" name="fpphoto_5086" lowsrc="DSCN5041.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_3188'],'480','360','1573',5);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5037.JPG" id="fpphoto_3188" name="fpphoto_3188" lowsrc="images/DSCN5037.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1203'],'480','360','1573',6);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5038.JPG" id="fpphoto_1203" name="fpphoto_1203" lowsrc="images/DSCN5038.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1267'],'500','360','1573',7);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5040.JPG" id="fpphoto_1267" name="fpphoto_1267" lowsrc="images/DSCN5040.JPG" width="100" height="72" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_5086'],'480','360','1573',8);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00027209/images/DSCN5041.JPG" id="fpphoto_5086" name="fpphoto_5086" lowsrc="images/DSCN5041.JPG" width="100" height="75" title="" align="absmiddle" /></a>
 <span style="width:0;height:75;visibility:hidden">.</span>
 <script language="JavaScript1.1">
 <!--
@@ -81,7 +81,7 @@ if (fp_ie4()) {
 </td>
 </tr>
 </table>
-<img id="fpGalleryMainImg_1573" name="fpGalleryMainImg_1573" width="480" height="360" src="DSCN5027.JPG" title="" />
+<img id="fpGalleryMainImg_1573" name="fpGalleryMainImg_1573" width="480" height="360" src="images/DSCN5027.JPG" title="" />
 <layer visibility="hide">
 <div id="fpGalleryCaptionCell_1573">
 </div>
@@ -145,11 +145,11 @@ if (fp_ns6()) {
 }
 -->
 </script>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1572'],'480','360','2394',0);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/DSCN3497.JPG" id="fpphoto_1572" name="fpphoto_1572" lowsrc="DSCN3497.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_3142'],'480','360','2394',1);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/DSCN3496.JPG" id="fpphoto_3142" name="fpphoto_3142" lowsrc="DSCN3496.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_5738'],'480','360','2394',2);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/DSCN3498.JPG" id="fpphoto_5738" name="fpphoto_5738" lowsrc="DSCN3498.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_6712'],'480','360','2394',3);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/DSCN3499.JPG" id="fpphoto_6712" name="fpphoto_6712" lowsrc="DSCN3499.JPG" width="100" height="75" title="" align="absmiddle" /></a>
-<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_3107'],'480','360','2394',4);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/DSCN3500.JPG" id="fpphoto_3107" name="fpphoto_3107" lowsrc="DSCN3500.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_1572'],'480','360','2394',0);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/images/DSCN3497.JPG" id="fpphoto_1572" name="fpphoto_1572" lowsrc="images/DSCN3497.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_3142'],'480','360','2394',1);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/images/DSCN3496.JPG" id="fpphoto_3142" name="fpphoto_3142" lowsrc="images/DSCN3496.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_5738'],'480','360','2394',2);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/images/DSCN3498.JPG" id="fpphoto_5738" name="fpphoto_5738" lowsrc="images/DSCN3498.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_6712'],'480','360','2394',3);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/images/DSCN3499.JPG" id="fpphoto_6712" name="fpphoto_6712" lowsrc="images/DSCN3499.JPG" width="100" height="75" title="" align="absmiddle" /></a>
+<a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_3107'],'480','360','2394',4);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00030613/images/DSCN3500.JPG" id="fpphoto_3107" name="fpphoto_3107" lowsrc="images/DSCN3500.JPG" width="100" height="75" title="" align="absmiddle" /></a>
 <span style="width:0;height:75;visibility:hidden">.</span>
 <script language="JavaScript1.1">
 <!--
@@ -172,7 +172,7 @@ if (fp_ie4()) {
 </td>
 </tr>
 </table>
-<img id="fpGalleryMainImg_2394" name="fpGalleryMainImg_2394" width="480" height="360" src="DSCN3497.JPG" title="" />
+<img id="fpGalleryMainImg_2394" name="fpGalleryMainImg_2394" width="480" height="360" src="images/DSCN3497.JPG" title="" />
 <layer visibility="hide">
 <div id="fpGalleryCaptionCell_2394">
 </div>
