--- a/Newsletters.htm
+++ b/Newsletters.htm
@@ -131,7 +131,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 		</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">&nbsp;<p align="left" style="margin-right: 100px">&nbsp;<p align="left" style="margin-right: 100px">
 		<span style="text-transform: uppercase"><b><font face="Verdana" size="3" color="#0000FF">Previous Newsletters</font></b></span><p align="left" style="margin-right: 100px">&nbsp;<p align="left" style="margin-right: 100px; margin-left:15px">
 		<b><font face="Verdana" color="#336699">
-		<a href="Connection%20Fall%202007.pdf">Fall 2008</a></font></b><p align="left" style="margin-right: 100px; margin-left:15px">
+		<a href="newsletters/tchoa-newsletter-fall-2007-vol3.pdf">Fall 2008</a></font></b><p align="left" style="margin-right: 100px; margin-left:15px">
 		<b><font face="Verdana" color="#336699">
 		<a href="newsletters/tchoa-newsletter-spring-2008.pdf">Spring 2008</a></font></b><p align="left" style="margin-right: 100px; margin-left:15px">
 		<b><a href="newsletters/tchoa-newsletter-fall-2007-vol1.pdf">
@@ -139,7 +139,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 		(new edition)</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">
 		<b><a href="Twin%20Creek%20Newsletter%20Fall%20Iss%205.pdf">
 		<font face="Verdana" size="2" color="#336699">Fall 2007 - Volume II, Issue 1</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">
-		<b><a href="Connection%20Fall%202007.pdf">
+		<b><a href="newsletters/tchoa-newsletter-fall-2007-vol3.pdf">
 		<font face="Verdana" size="2" color="#336699">Fall 2007 - Volume III, Issue 1 
 		</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">
 		<b><font face="Verdana" size="2" color="#336699">
