moving architectural application

--- a/services.htm
+++ b/services.htm
@@ -249,7 +249,7 @@ if(MSFPhover) { MSFPnav12n=MSFPpreload("fp_derived/Bylaws.htm_cmp_ice174010_vbtn
 				<p>Forms are in PDF Format, please click on appropriate form and 
 				print out as needed.</p>
 				<p>&nbsp;</p>
-				<p>1.&nbsp; <a href="Architectural%20Application.pdf">Architectural Approval</a></p>
+				<p>1.&nbsp; <a href="documents/tchoa-architectural-application.pdf">Architectural Approval</a></p>
 				<p>2.&nbsp; <a href="Registration%20Form.pdf">Directory Form</a></p>
 				<p>3.&nbsp; Newsletter/Email Form</p>
 				<p>4.&nbsp; Committee Form</p>
