--- a/resources.html
+++ b/resources.html
@@ -242,7 +242,7 @@ path="m@4@5l@4@11@9@11@9@5xe" filled="f" stroked="f">
 height:42pt'>
 <v:imagedata src="Resources_files/image003.png" o:href="http://addressart.com/index/index13.gif"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=96 height=56
-src="Resources_files/image004.jpg" v:shapes="_x0000_s1025"><![endif]></span></p>
+src="images/address-art.jpg" v:shapes="_x0000_s1025"><![endif]></span></p>
 	<p style="margin-bottom: 6px">&nbsp;</p>
 	<p align="left" style="margin-bottom: 6px">
 	<b><font size="4" color="#336699">Twin Creeks Referrals: </font></b>
