--- a/Crime Watch.htm
+++ b/Crime Watch.htm
@@ -186,7 +186,7 @@ v:shapes="_x0000_s1027"></span><![endif]><!--[if gte vml 1]><v:shape id="_x0000_
 <![endif]></v:textbox>
 </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;position:
 absolute;z-index:2;left:525px;top:224px;width:254px;height:96px'><img
-width=254 height=96 src="Crime%20Watch_files/image004.gif"
+width=254 height=96 src="images/crime-watch-impd.gif"
 alt="Text Box: &nbsp;&#13;&#10;To reach the IMPD’s&#13;&#10;non-emergency dispatch number, dial 327-3811.&#13;&#10;&#13;&#10;"
 v:shapes="_x0000_s1028"></span><![endif]></p>
 								&nbsp;<p align="center"><b>
