Updating .htm -> .html URLs.

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ board members:</font></p>
 <p><font size="2" face="sans-serif">Charles Spencer (alternate)</font> <br>
 &nbsp;</p>
 <p><font color="#336699"><b>Crime Watch Page - </b></font><font color="#FF0000"><i><b>
-Updates <a href="Crime%20Watch.htm">ADDED</a></b></i></font></p>
-<p>We have added a new <a href="Crime%20Watch.htm">Crime Watch</a> page in an 
+Updates <a href="crime-watch.html">ADDED</a></b></i></font></p>
+<p>We have added a new <a href="crime-watch.html">Crime Watch</a> page in an 
 effort to keep residents accurately informed on issues relating to safety and 
 our neighborhood Crime Watch committee..</p><p>&nbsp;</p>
 <p><b><font color="#336699">Welcome New Residents!</font></b></p>
-<p>Please visit the <a href="New%20Residents.htm">New Residents</a> page for 
+<p>Please visit the <a href="new-residents.html">New Residents</a> page for 
 information about your Twin Creeks Community.</p>
 	<p>&nbsp;</p>
 	<p><font color="#336699"><b>June </b></font>
@@ -69,7 +69,7 @@ you would like a PDF copy.</p>
 	&nbsp;</p>
 <p><u><b><font color="#336699">Volunteers Needed</font></b></u></p>
 	<p>We have openings for anyone interested in implementing a 
-	neighborhood event or activity. Contact a <a href="Board.htm">board</a> member if 
+	neighborhood event or activity. Contact a <a href="board.html">board</a> member if 
 	interested. </p>
 <p>&nbsp;</p>
 	</div>
@@ -215,7 +215,7 @@ and Website Updates ~</font></p>
 &nbsp;<p style="margin-bottom: 6px">Do we have your current email address?<p>
 The Twin Creeks HOA newsletter will now issued electronically, please click on the 
 link below to register.<p>&nbsp;<p align="center">
-<a href="Registration%20Page.htm">
+<a href="registration-page.html">
 <img border="0" src="MCj04338130000[1].png" width="75" height="75"></a><p align="center">
 &nbsp;<p align="center">
 <font color="#FF0000"><b><i>Register Now!</i></b></font></div>
@@ -407,7 +407,7 @@ link below to register.<p>&nbsp;<p align="center">
 <ul>
 	<li>
 	<p align="left" style="margin-right: 6px">
-	<font style="font-size: 11pt"><a href="Board.htm">Board Members</a>
+	<font style="font-size: 11pt"><a href="board.html">Board Members</a>
 	</font></li>
 	<li>
 	<p align="left" style="margin-right: 6px">
