--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About Us
 ---
 
 <div class="header banner">
-	<h2>~ Welcome Home! ~</h2>
+	<h2>Welcome Home!</h2>
 </div>
 
 <img border="0" src="images/fieldstone-home.jpg" width="375" height="233" align="right" alt="">
