more homepage HTML errors

--- a/index.html
+++ b/index.html
@@ -138,5 +138,5 @@ and suggestions.</p>
 	<li><a href="Covenants.pdf">Covenants</a></li>
 	<li><a href="documents/tchoa-bylaws-revised.pdf">Bylaws</a></li>
 	<li><a href="Rules%20Standards%20v2008.pdf">Rules and Standards</a></li>
-	<li><a href="http://maps.google.com/maps?q=Robinsrock+Drive,+Indianapolis,+In,+46268&spn=0.007556,0.020222&t=h&iwloc=A&hl=en">Interactive Map</a></li>
+	<li><a href="http://maps.google.com/maps?q=Robinsrock+Drive,+Indianapolis,+In,+46268&amp;spn=0.007556,0.020222&amp;t=h&amp;iwloc=A&amp;hl=en">Interactive Map</a></li>
 </ul>
