first round of changes

--- a/index.html
+++ b/index.html
@@ -43,44 +43,6 @@ and suggestions.</p>
 				<li><a href="Kirkpatrick%20Neighbor%20letter.pdf">Kirkpatrick Chosen</a></li>
 			</ul>
 			
-			<h4>Budget Reserve Study - Where the Money Goes</h4>
-			<p>Listed below is a commissioned report on our capital replacement reserve study. The goal of 
-			this study is to ensure our community is sufficiently planning for longtime, 
-			periodic capital expenditures.</p>
-			
-			<ul>
-				<li><a href="Sec%201%20-%20Board%20Summary.pdf">Summary</a></li>
-				<li><a href="Homeowner%20-%202008%20Dues%20Increase.pdf">Inventory</a></li>
-				<li><a href="Sec%203%20-%20Annual%20Expenditures.pdf">Expenditures</a></li>
-				<li><a href="Sec%204%20-%20Financial%20Schedule.pdf">Schedule</a></li>
-				<li><a href="Sec%205%20-%20Funding%20Charts.pdf">Charts</a></li>
-				<li><a href="Sec%206%20-%20Exhibits.pdf">Exhibits</a></li>
-			</ul>
-			
-			<h4>Budget Updates</h4>
-			<a href="documents/tchoa-ytd-2009-may.pdf">May 2009 - Year To Date Expenditures</a>
-			
-			<h4>2008 Final Budget (Amended)</h4>
-			
-			<p>Linked below is the 2008 year end budget.  There was a shortfall 
-			of $12,396.71 which resulted in the Board having to use reserve funds to cover 
-			these expenses.</p>
-			
-			<p>The factors which caused the shortfall were:</p>
-			
-			<ul>
-				<li>Tree removal and trimming due to the wind storm in the spring.</li>
-				<li>Preventative erosion maintenance of the ponds exceeded budget.</li>
-				<li>Higher landscaping costs due to fuel and fertilizer prices.</li>
-				<li>Reimbursable fees for legal services not collected.</li>
-				<li>Reimbursable fees for lawn maintenance of vacant and/or delinquent homeowners that were not collected.</li>
-				<li>Annual dues not received due to vacant, foreclosure or bankrupt properties.</li>
-			</ul>
-			
-			<p>Several of these items have been addressed in the 2009 budget. 
-			In addition, all service contracts are being re-negotiated in an attempt to 
-			maintain a balance budget for 2009. If 
-			you have any questions please contact either the secretary or treasurer.</p>
 		</div>
 	</div>
 
@@ -88,10 +50,6 @@ and suggestions.</p>
 		<h3>Community and Website Updates</h3>
 			
 		<div class="section">
-			<h4>New Board Members</h4>
-			<p>Please welcome our new board members:<br>
-				Clarence Abernathy (Vice President)<br>
-				Charles Spencer (alternate)</p>
 				
 			<h4>Crime Watch Page</h4>
 			<p>We have added a new <a href="crime-watch.html">Crime Watch</a> page in an 
@@ -103,10 +61,8 @@ and suggestions.</p>
 			information about your Twin Creeks Community.</p>
 			
 			<h4>Association Dues</h4>
-			<ul>
-				<li><a href="2009%20Dues%20Increase.pdf">2009 Increase</a></li>
-				<li><a href="Homeowner%20-%202008%20Dues%20Increase.pdf">2008 Increase</a></li>
-			</ul>
+			
+			<p>Association dues are $353/year.  If not paid on time, the late fee is $42.</p>
 			
 			<h4>Volunteers Needed</h4>
 			<p>We have openings for anyone interested in implementing a 
@@ -121,13 +77,6 @@ and suggestions.</p>
 			</p>
 		</div>
 
-		<h3>Sign Up For Updates</h3>
-		<div class="section">
-			<p>Do we have your current email address?</p>
-			<p>The Twin Creeks HOA newsletter will now issued electronically, please click on the link below to register.</p>
-			
-			<a href="registration-page.html">Register Now!</a>
-		</div>
 	</div>
 </div>
 
