--- a/newsletters.html
+++ b/newsletters.html
@@ -3,43 +3,26 @@ layout: inside
 category: newsletters
 title: Newsletters
 ---
-<p align="left" style="margin-right: 100px">
-&nbsp;<p align="left" style="margin-right: 100px">
-<span style="text-transform: uppercase"><b>
-<font face="Verdana" size="3" color="#0000FF">Current Newsletter<img border="0" src="images/newsletter.jpg" width="250" height="320" align="right"></font></b></span><p align="left" style="margin-right: 100px">
-<p align="left" style="margin-left: 15px; margin-right: 100px">
-<b><a href="Newsletter%20Winter%202008.pdf">
-<font face="Verdana" size="2" color="#336699">Winter 2008 
-</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">&nbsp;<p align="left" style="margin-right: 100px">&nbsp;<p align="left" style="margin-right: 100px">
-<span style="text-transform: uppercase"><b><font face="Verdana" size="3" color="#0000FF">Previous Newsletters</font></b></span><p align="left" style="margin-right: 100px">&nbsp;<p align="left" style="margin-right: 100px; margin-left:15px">
-<b><font face="Verdana" color="#336699">
-<a href="newsletters/tchoa-newsletter-fall-2007-vol3.pdf">Fall 2008</a></font></b><p align="left" style="margin-right: 100px; margin-left:15px">
-<b><font face="Verdana" color="#336699">
-<a href="newsletters/tchoa-newsletter-spring-2008.pdf">Spring 2008</a></font></b><p align="left" style="margin-right: 100px; margin-left:15px">
-<b><a href="newsletters/tchoa-newsletter-fall-2007-vol1.pdf">
-<font face="Verdana" size="2" color="#336699">Fall 2007 - Volume I, Issue 1 
-(new edition)</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">
-<b><a href="Twin%20Creek%20Newsletter%20Fall%20Iss%205.pdf">
-<font face="Verdana" size="2" color="#336699">Fall 2007 - Volume II, Issue 1</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">
-<b><a href="newsletters/tchoa-newsletter-fall-2007-vol3.pdf">
-<font face="Verdana" size="2" color="#336699">Fall 2007 - Volume III, Issue 1 
-</font></a></b><p align="left" style="margin-left: 15px; margin-right: 100px">
-<b><font face="Verdana" size="2" color="#336699">
-<a href="Twin%20Creek%20Newsletter%20Summer%20Iss%204.pdf">Summer - Volume I, 
-Issue 4</a></font></b><p align="left" style="margin-left: 15px; margin-right: 100px">
-<b><font face="Verdana" size="2" color="#336699">
-<a href="Twin%20Creek%20Newsletter%20Spring%20Iss%203.pdf">Spring - Volume I, Issue 3</a></font></b><p align="left" style="margin-left: 15px; margin-right: 100px">
-<b><font face="Verdana" color="#336699">
-<a href="Twin%20Creek%20Newsletter%20Fall%20Iss%202.pdf">Fall - Volume I, Issue 
-2</a></font></b><p align="left" style="margin-left: 15px; margin-right: 100px">
-<b><font face="Verdana" color="#336699">
-<a href="Twin%20Creek%20Newsletter%20Summer%20Iss%201.pdf">Summer - Volume I, 
-Issue 1</a></font></b><p align="left" style="margin-right: 100px">
-&nbsp;<p align="left" style="margin-right: 100px">
-&nbsp;<p><font face="Arial, Helvetica, sans-serif" size="2">The 
-newsletters listed above are in PDF format and require Acrobat Reader to open. Download Acrobat 
-Reader FREE at </font>
-<font face="Arial, Helvetica, sans-serif" size="3">
-<a href="http://www.adobe.com/products/acrobat/readstep.html">
-<img height="31" src="images/get-acrobat-reader.gif" width="88" align="middle" border="0" hspace="3"></a></font></p>
-<p align="left" style="margin-right: 100px">
+
+<h3>Current Newsletter</h3>
+
+<p><img border="0" src="images/newsletter.jpg" width="250" height="320" align="right">We're currently working on the Spring 2013 newsletter.</p>
+
+
+<h3>Previous Newsletters</h3>
+
+<ul>
+	<li><a href="Newsletter%20Winter%202008.pdf">Winter 2008</a></li>
+	<li><a href="newsletters/tchoa-newsletter-fall-2007-vol3.pdf">Fall 2008</a></li>
+	<li><a href="newsletters/tchoa-newsletter-spring-2008.pdf">Spring 2008</a></li>
+	<li><a href="newsletters/tchoa-newsletter-fall-2007-vol1.pdf">Fall 2007 - Volume I, Issue 1</a></li>
+	<li><a href="Twin%20Creek%20Newsletter%20Fall%20Iss%205.pdf">Fall 2007 - Volume II, Issue 1</a></li>
+	<li><a href="newsletters/tchoa-newsletter-fall-2007-vol3.pdf">Fall 2007 - Volume III, Issue 1</a></li>
+	<li><a href="Twin%20Creek%20Newsletter%20Summer%20Iss%204.pdf">Summer - Volume I, Issue 4</a></li>
+	<li><a href="Twin%20Creek%20Newsletter%20Spring%20Iss%203.pdf">Spring - Volume I, Issue 3</a></li>
+	<li><a href="Twin%20Creek%20Newsletter%20Fall%20Iss%202.pdf">Fall - Volume I, Issue 2</a></li>
+	<li><a href="Twin%20Creek%20Newsletter%20Summer%20Iss%201.pdf">Summer - Volume I, Issue 1</a></li>
+</ul>
+
+<p>The newsletters listed above are in PDF format and require Acrobat Reader to open. Download Acrobat Reader FREE at <a href="http://www.adobe.com/products/acrobat/readstep.html">
+<img height="31" src="images/get-acrobat-reader.gif" width="88" align="middle" border="0" hspace="3"></a></p>
